<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ASTON</groupId>
  <artifactId>ASTON</artifactId>
  <version>5.9.2-SNAPSHOT</version>

  <properties>
    <!-- compile -->
    <gson.version>2.11.0</gson.version>
    <httpclient5.version>5.2.1</httpclient5.version>

    <!-- provided -->
    <selenium.version>4.22.0</selenium.version>

    <!-- test -->
    <junit.version>5.10.3</junit.version>
    <assertj.version>3.26.0</assertj.version>


    <!-- plugins -->
    <maven-release-plugin.version>3.1.0</maven-release-plugin.version>
    <maven-surefire-plugin.version>3.3.0</maven-surefire-plugin.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>
    <exec-maven-plugin.version>3.3.0</exec-maven-plugin.version>
    <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
    <maven-asciidoctor-plugin.version>3.0.0</maven-asciidoctor-plugin.version>
    <asciidoctorj-pdf.version>2.3.17</asciidoctorj-pdf.version>
    <maven-site.version>3.12.1</maven-site.version>
    <maven-project-info-reports.version>3.6.1</maven-project-info-reports.version>
    <maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>

    <!-- Java version -->
    <java.version>11</java.version>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.compiler.source>${java.version}</maven.compiler.source>

    <!-- encoding -->
    <project.encondig>UTF-8</project.encondig>
    <project.build.sourceEncoding>${project.encondig}</project.build.sourceEncoding>
    <project.reporting.outputEncoding>${project.encondig}</project.reporting.outputEncoding>

    <!-- format date -->
    <maven.build.timestamp.format>dd-MM-yyyy</maven.build.timestamp.format>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-grid</artifactId>
      <version>${selenium.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-java</artifactId>
      <version>7.18.0</version>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-junit</artifactId>
      <version>7.18.0</version>
    </dependency>
    <dependency>
      <groupId>com.codeborne</groupId>
      <artifactId>selenide</artifactId>
      <version>7.4.0</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>21</source>
          <target>21</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>